# geom-2d

./: Cargo.toml  Readme.md
example/: 01.rs
src/: chull.rs  distance.rs  inter.rs  lib.rs  line.rs  mono.rs  point.rs  pointz.rs  polygon.rs  ring.rs  segment.rs  tests.rs  util.rs  wkt.rs
src/line/: tests.rs
src/point/: tests.rs
src/pointz/: tests.rs
