[package]
name = "geom-2d"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
edition = "2018"


[dependencies]
math-util = { git = "https://github.com/intdxdt/math-util", branch="master"}
coordinate = { git = "https://github.com/intdxdt/coordinate", branch="master"}
side-rel = { git = "https://github.com/intdxdt/side-rel", branch="master"}
rtree-2d = { git = "https://github.com/intdxdt/rtree-2d", branch="master"}
bbox-2d = { git = "https://github.com/intdxdt/bbox-2d", branch="master"}
robust_orientation = { git = "https://github.com/intdxdt/robust_orientation", branch="master"}
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
wkt = "0.6.0"
